Fixed (sort of) the time overflow issue (bug #57).
git-svn-id: https://develop.eng.uts.edu.au/projects/personal/sahara/svn/WI/trunk@1102 7ee224fa-57ca-4419-87f9-1f4314938d77

--- a/public/css/session.css
+++ b/public/css/session.css
@@ -47,7 +47,7 @@
 
 .sessionpanel {
 	border: 1px solid #B5B5B5;
-	width: 175px;
+	width: 11.55em;
 	position: absolute;
 	-moz-box-shadow: 0 0 4px #B5B5B5;
 	-webkit-box-shadow: 0 0 4px #B5B5B5;
@@ -91,7 +91,7 @@
 }
 
 #sessiontime span {
-	font-size: 1.15em;
+	font-size: 1.05em;
 	color: #000000;
 	font-weight: bold;
 }
@@ -104,7 +104,7 @@
 
 #sessionremainingtime .timefields {
 	text-align: center;
-	font-size: 1.5em;
+	font-size: 1.4em;
 	padding: 0 0 10px;
 	margin-top: -3px;
 }
